# pforth

./: .gitattributes  .gitignore  .travis.yml  CHANGES.md  CMakeLists.txt  README.md  RELEASES.md  pforth.cpp  readme.txt  releases.txt
.github/workflows/: cmake.yml  make.yml  make32.yml
csrc/: CMakeLists.txt  LICENSE  pf_all.h  pf_cglue.c  pf_cglue.h  pf_clib.c  pf_clib.h  pf_core.c  pf_core.h  pf_float.h  pf_guts.h  pf_host.h  pf_inc1.h  pf_inner.c  pf_io.c  pf_io.h  pf_io_none.c  pf_main.c  pf_mem.c  pf_mem.h  pf_save.c  pf_save.h  pf_search.c  pf_search.h  pf_text.c  pf_text.h  pf_types.h  pf_win32.h  pf_words.c  pf_words.h  pfcompfp.h  pfcompil.c  pfcompil.h  pfcustom.c  pfdicdat.h  pfdicdat_arm.h  pfinnrfp.h  pforth.h  sources.cmake
csrc/posix/: pf_io_posix.c
csrc/ppc/: head.S  pf_io_ppc.c
csrc/stdio/: pf_fileio_stdio.c  pf_io_stdio.c
csrc/win32/: pf_io_win32.c
csrc/win32_console/: pf_io_win32_console.c
custom/: get-make-cmd.sh
custom/01-be-gone/: cf_demo1.c  demo.fth  go-v0.sh  go-v1.sh  go.sh
custom/02-argc-argv/: cf_demo2.c  demo.correct_output  demo.fth  diff-pf_main.c  go-v1.sh
examples/custom/: cf_helpers.h
examples/custom/01-parameter-passing/: cf_demo1.c  demo.fth  go-v1.sh  go.sh
fth/: ansilocs.fth  bench.fth  c_struct.fth  case.fth  condcomp.fth  coretest.fth  file.fth  filefind.fth  floats.fth  forget.fth  history.fth  loadhist.fth  loadp4th.fth  locals.fth  math.fth  member.fth  misc1.fth  misc2.fth  mkdicdat.fth  numberio.fth  private.fth  require.fth  save-input.fth  savedicd.fth  search.fth  see.fth  siev.fth  slashqt.fth  smart_if.fth  strings.fth  struct.fth  structure.fth  synonym.fth  system.fth  t_alloc.fth  t_case.fth  t_corex.fth  t_file.fth  t_floats.fth  t_include.fth  (+16 more)
fth/utils/: clone.fth  dump_struct.fth  load_file.fth  make_all256.fth
trunk/: readme.txt  releases.txt
trunk/csrc/: pf_all.h  pf_cglue.c  pf_clib.c  pf_clib.h  pf_core.c  pf_core.h  pf_float.h  pf_guts.h  pf_host.h  pf_inner.c  pf_io.c  pf_io.h  pf_io_none.c  pf_main.c  pf_mem.c  pf_save.c  pf_save.h  pf_text.c  pf_text.h  pf_types.h  pf_words.c  pf_words.h  pfcompil.c  pfcompil.h  pfdicdat_arm.h  pfinnrfp.h
trunk/csrc/posix/: pf_io_posix.c
trunk/csrc/stdio/: pf_io_stdio.c
trunk/csrc/win32_console/: pf_io_win32_console.c
trunk/fth/: ansilocs.fth  bench.fth  c_struct.fth  case.fth  coretest.fth  floats.fth  history.fth  loadhist.fth  loadp4th.fth  member.fth  misc1.fth  numberio.fth  private.fth  savedicd.fth  strings.fth  system.fth  t_alloc.fth  t_include.fth  t_load.fth  t_nolf.fth  t_tools.fth  termio.fth  tester.fth  trace.fth  tut.fth  wordslik.fth
trunk/fth/utils/: dump_struct.fth  load_file.fth  trace.fth
wiki/: CompilingOnMac.wiki  CompilingOnUnix.wiki  CompilingOnWindows.wiki  HowToCompile.wiki  PForthHome.wiki
